security(client-world): bound persisted profile input sizes